🐛 Fix highlighted boxed-list corners clipping
Fixes issue where highlighted boxed-list rows show non-rounded bottom corners. This fix also resolves an issue where some highlighted activatable text fields showed non-rounded bottom corners.

--- a/gtk/Tahoe-Dark/gtk-4.0/gtk.css
+++ b/gtk/Tahoe-Dark/gtk-4.0/gtk.css
@@ -624,12 +624,25 @@ separator.vertical {
   opacity: 0;
 }
 
-list.boxed-list > row.property,
-list.boxed-list > row.activatable.combo,
-list.boxed-list > row.activatable {
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+list.boxed-list > row {
+  border-radius: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+list.boxed-list > row:first-child {
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+list.boxed-list > row:last-child {
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  border-bottom: none;
+}
+
+list.boxed-list > row:only-child {
+  border-radius: 16px;
+  border-bottom: none;
 }
 
 widget.end.sidebar-pane,
