--- a/gtk/Tahoe-Light/gtk-4.0/gtk.css
+++ b/gtk/Tahoe-Light/gtk-4.0/gtk.css
@@ -616,10 +616,25 @@ separator.vertical {
   opacity: 0;
 }
 
-list.boxed-list > row.property,
-list.boxed-list > row.activatable.combo,
-list.boxed-list > row.activatable {
-  border-bottom-color: rgba(255, 255, 255, 0);
+list.boxed-list > row {
+  border-radius: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+list.boxed-list > row:first-child {
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+list.boxed-list > row:last-child {
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  border-bottom: none;
+}
+
+list.boxed-list > row:only-child {
+  border-radius: 16px;
+  border-bottom: none;
 }
 
 widget.end.sidebar-pane,
